buttons were refactored

--- a/app/static/employer-application-page.html
+++ b/app/static/employer-application-page.html
@@ -129,7 +129,7 @@
           </div>
         </div>
         <div class="application-form__item">
-          <button class="button button--fluid" type="button" data-modal-open="registration-success-modal">Complete application
+          <button class="button button--fluid button--surfie-green" type="button" data-modal-open="registration-success-modal">Complete application
           </button>
         </div>
       </form>
@@ -144,7 +144,7 @@
           <p>You will be noticed by email when your account will be activated.</p>
         </div>
         <div class="registration-success-modal__button">
-          <button class="button button--bordered" type="button" data-modal-close="registration-success-modal">Back to home page
+          <button class="button button--border-surfie-green" type="button" data-modal-close="registration-success-modal">Back to home page
           </button>
         </div>
       </div>
