--- a/app/static/employers-page.html
+++ b/app/static/employers-page.html
@@ -131,9 +131,9 @@
           </div>
           <div class="employers-page__heading-buttons">
             <div class="button-group">
-              <a class="button button--bordered button-group__button" href="#">Permissions
+              <a class="button button--border-surfie-green button-group__button" href="#">Permissions
               </a>
-              <button class="button button-group__button" type="button"><span>Invite employee</span>
+              <button class="button button--surfie-green button-group__button" type="button"><span>Invite employee</span>
                 <svg class="svg-icon svg-icon--white button__icon" width="20" height="13">
                   <use href="images/svg/svg-sprite/symbol/sprite.svg#add-person" x="0" y="0"></use>
                 </svg>
@@ -169,7 +169,7 @@
                 </div>
               </div>
               <div class="catalog__right catalog__right--ml-auto">
-                <button class="button button--bg-white" type="button"><span>Filter</span>
+                <button class="button button--white" type="button"><span>Filter</span>
                   <svg class="svg-icon svg-icon--surfie-green button__icon" width="14" height="14">
                     <use href="images/svg/svg-sprite/symbol/sprite.svg#filter" x="0" y="0"></use>
                   </svg>
@@ -223,7 +223,7 @@
                           </div>
                         </td>
                         <td>
-                          <button class="button button--no-events button--bordered button--border-caribbean-green" type="button">Freelance
+                          <button class="button button--no-events button--border-caribbean-green" type="button">Freelance
                           </button>
                         </td>
                         <td>
@@ -322,7 +322,7 @@
                           </div>
                         </td>
                         <td>
-                          <button class="button button--no-events button--bordered" type="button">Full time
+                          <button class="button button--no-events button--border-surfie-green" type="button">Full time
                           </button>
                         </td>
                         <td>
@@ -423,7 +423,7 @@
                           </div>
                         </td>
                         <td>
-                          <button class="button button--no-events button--bordered" type="button">Full time
+                          <button class="button button--no-events button--border-surfie-green" type="button">Full time
                           </button>
                         </td>
                         <td></td>
@@ -489,7 +489,7 @@
                           </div>
                         </td>
                         <td>
-                          <button class="button button--no-events button--bordered" type="button">Full time
+                          <button class="button button--no-events button--border-surfie-green" type="button">Full time
                           </button>
                         </td>
                         <td>
@@ -603,14 +603,11 @@
                   </div>
                   <div class="dropdown massive-actions-dropdown js-dropdown" data-dropdown="notifications">
                     <div class="dropdown__toggle massive-actions-dropdown__toggle" data-dropdown-toggle="notifications">
-                      <div class="massive-actions-dropdown__toggle-title">
-                        <p class="font-semibold">Massive Actions</p>
-                      </div>
-                      <div class="massive-actions-dropdown__toggle-icon">
-                        <svg class="svg-icon svg-icon--boston-blue" width="8" height="6">
+                      <button class="button button--alabaster"><span>Massive Actions</span>
+                        <svg class="svg-icon svg-icon--boston-blue button__icon" width="8" height="6">
                           <use href="images/svg/svg-sprite/symbol/sprite.svg#chevron-down" x="0" y="0"></use>
                         </svg>
-                      </div>
+                      </button>
                     </div>
                     <div class="dropdown__body massive-actions-dropdown__body">
                       <div class="actions">
@@ -637,6 +634,29 @@
                       </div>
                     </div>
                   </div>
+                </div>
+              </div>
+            </div>
+            <div class="catalog__footer">
+              <div class="catalog-navigation">
+                <div class="catalog-navigation__count">
+                  <div class="catalog-navigation__count-title">Page</div>
+                  <input class="catalog-navigation__count-input" value="36" type="number">
+                  <div class="catalog-navigation__count-total">/145</div>
+                </div>
+                <div class="catalog-navigation__button">
+                  <button class="button button--white button--size-60 button--radius-secondary" type="button">
+                    <svg class="svg-icon svg-icon--surfie-green catalog-navigation__button-icon" width="14" height="14">
+                      <use href="images/svg/svg-sprite/symbol/sprite.svg#chevron-left" x="0" y="0"></use>
+                    </svg>
+                  </button>
+                </div>
+                <div class="catalog-navigation__button">
+                  <button class="button button--white button--size-60 button--radius-secondary" type="button">
+                    <svg class="svg-icon svg-icon--surfie-green catalog-navigation__button-icon" width="14" height="14">
+                      <use href="images/svg/svg-sprite/symbol/sprite.svg#chevron-right" x="0" y="0"></use>
+                    </svg>
+                  </button>
                 </div>
               </div>
             </div>
