--- a/app/static/login-page.html
+++ b/app/static/login-page.html
@@ -59,7 +59,7 @@
               <div class="form__line">
                 <div class="column-group column-group--md column-group--justify-items-center">
                   <div class="column-group__item">
-                    <button class="button button--fluid" type="submit">Sign in
+                    <button class="button button--fluid button--surfie-green" type="submit">Sign in
                     </button>
                   </div>
                   <div class="column-group__item">
@@ -88,7 +88,7 @@
           </div>
           <div class="form-box__buttons">
             <div class="button-group button-group--column">
-              <button class="button button--fluid button--bg-cornflower-blue button-group__button" type="button">
+              <button class="button button--fluid button--cornflower-blue button-group__button" type="button">
                 <div class="button__prepend">
                   <svg class="svg-icon svg-icon--white" width="25" height="25">
                     <use href="images/svg/svg-sprite/symbol/sprite.svg#google" x="0" y="0"></use>
