--- a/app/static/application-page-1.html
+++ b/app/static/application-page-1.html
@@ -214,10 +214,10 @@
                     </div>
                   </div>
                   <div class="application-form__card-line">
-                    <button class="button button--bordered" type="button"><span>Add combination</span><span class="button__icon">
-                                      <svg class="svg-icon svg-icon--surfie-green" width="14" height="14">
-                                        <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
-                                      </svg></span>
+                    <button class="button button--border-surfie-green" type="button"><span>Add combination</span>
+                      <svg class="svg-icon svg-icon--surfie-green button__icon" width="14" height="14">
+                        <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
+                      </svg>
                     </button>
                   </div>
                 </div>
@@ -382,10 +382,10 @@
                     </div>
                   </div>
                   <div class="application-form__card-line">
-                    <button class="button button--bordered" type="button"><span>Add language</span><span class="button__icon">
-                                      <svg class="svg-icon svg-icon--surfie-green" width="14" height="14">
-                                        <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
-                                      </svg></span>
+                    <button class="button button--border-surfie-green" type="button"><span>Add language</span>
+                      <svg class="svg-icon svg-icon--surfie-green button__icon" width="14" height="14">
+                        <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
+                      </svg>
                     </button>
                   </div>
                 </div>
@@ -507,10 +507,10 @@
                     </div>
                   </div>
                   <div class="application-form__card-line">
-                    <button class="button button--bordered" type="button"><span>Add combination</span><span class="button__icon">
-                                      <svg class="svg-icon svg-icon--surfie-green" width="14" height="14">
-                                        <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
-                                      </svg></span>
+                    <button class="button button--border-surfie-green" type="button"><span>Add combination</span>
+                      <svg class="svg-icon svg-icon--surfie-green button__icon" width="14" height="14">
+                        <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
+                      </svg>
                     </button>
                   </div>
                 </div>
@@ -640,10 +640,10 @@
                     </div>
                   </div>
                   <div class="application-form__card-line">
-                    <button class="button button--bordered" type="button"><span>Add combination</span><span class="button__icon">
-                                      <svg class="svg-icon svg-icon--surfie-green" width="14" height="14">
-                                        <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
-                                      </svg></span>
+                    <button class="button button--border-surfie-green" type="button"><span>Add combination</span>
+                      <svg class="svg-icon svg-icon--surfie-green button__icon" width="14" height="14">
+                        <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
+                      </svg>
                     </button>
                   </div>
                   <div class="application-form__card-line">
@@ -744,10 +744,10 @@
                     </div>
                   </div>
                   <div class="application-form__card-line">
-                    <button class="button button--bordered" type="button"><span>Add combination</span><span class="button__icon">
-                                      <svg class="svg-icon svg-icon--surfie-green" width="14" height="14">
-                                        <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
-                                      </svg></span>
+                    <button class="button button--border-surfie-green" type="button"><span>Add combination</span>
+                      <svg class="svg-icon svg-icon--surfie-green button__icon" width="14" height="14">
+                        <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
+                      </svg>
                     </button>
                   </div>
                 </div>
@@ -844,10 +844,10 @@
                     </div>
                   </div>
                   <div class="application-form__card-line">
-                    <button class="button button--bordered" type="button"><span>Add language</span><span class="button__icon">
-                                      <svg class="svg-icon svg-icon--surfie-green" width="14" height="14">
-                                        <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
-                                      </svg></span>
+                    <button class="button button--border-surfie-green" type="button"><span>Add language</span>
+                      <svg class="svg-icon svg-icon--surfie-green button__icon" width="14" height="14">
+                        <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
+                      </svg>
                     </button>
                   </div>
                 </div>
@@ -944,10 +944,10 @@
                     </div>
                   </div>
                   <div class="application-form__card-line">
-                    <button class="button button--bordered" type="button"><span>Add language</span><span class="button__icon">
-                                      <svg class="svg-icon svg-icon--surfie-green" width="14" height="14">
-                                        <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
-                                      </svg></span>
+                    <button class="button button--border-surfie-green" type="button"><span>Add language</span>
+                      <svg class="svg-icon svg-icon--surfie-green button__icon" width="14" height="14">
+                        <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
+                      </svg>
                     </button>
                   </div>
                   <div class="application-form__card-line">
@@ -994,11 +994,11 @@
             </div>
             <div class="application-form__item">
               <div class="button-group">
-                <a class="button button--bg-white button-group__button" href="application-page-1.html">Back
+                <a class="button button--white button-group__button" href="application-page-1.html">Back
                 </a>
-                <a class="button button-group__button" href="application-page-2.html">Next
+                <a class="button button--surfie-green button-group__button" href="application-page-2.html">Next
                 </a>
-                <button class="button button--bg-transparent button-group__button">Discard
+                <button class="button button--transparent button-group__button">Discard
                 </button>
               </div>
             </div>
