--- a/app/static/application-page-2.html
+++ b/app/static/application-page-2.html
@@ -121,10 +121,10 @@
                     </div>
                   </div>
                   <div class="application-form__card-line">
-                    <button class="button button--bordered" type="button"><span>One more</span><span class="button__icon">
-                                      <svg class="svg-icon svg-icon--surfie-green" width="14" height="14">
-                                        <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
-                                      </svg></span>
+                    <button class="button button--border-surfie-green" type="button"><span>One more</span>
+                      <svg class="svg-icon svg-icon--surfie-green button__icon" width="14" height="14">
+                        <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
+                      </svg>
                     </button>
                   </div>
                 </div>
@@ -199,17 +199,17 @@
                             <h6>Uploaded documents: <span class="p-sm font-semibold upload-documents__header-empty text-silver-chalice">No files yet</span></h6>
                           </div>
                           <div class="upload-documents__header-button">
-                            <button class="button button--disabled button--shadowed button--bg-white" type="button"><span>Download all</span><span class="button__icon">
-                                                          <svg class="svg-icon" width="15" height="13">
-                                                            <use href="images/svg/svg-sprite/symbol/sprite.svg#download" x="0" y="0"></use>
-                                                          </svg></span>
+                            <button class="button button--disabled button--shadowed button--white" type="button"><span>Download all</span>
+                              <svg class="svg-icon button__icon" width="15" height="13">
+                                <use href="images/svg/svg-sprite/symbol/sprite.svg#download" x="0" y="0"></use>
+                              </svg>
                             </button>
                           </div>
                         </div>
                         <div class="upload-documents__content">
                           <div class="upload-documents-box js-upload-documents-box">
                             <div class="upload-documents-box__label dz-message"><span class="upload-documents-box__label-title">Drag and drop files</span>
-                              <button class="button button--bg-alabaster button--size-50 upload-documents-box__label-button" type="button">
+                              <button class="button button--alabaster button--size-50 upload-documents-box__label-button" type="button">
                                 <svg class="svg-icon svg-icon--surfie-green" width="14" height="14">
                                   <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
                                 </svg>
@@ -342,7 +342,7 @@
                     </div>
                   </div>
                   <div class="row-group__item">
-                    <button class="button button--bordered js-scroll-up" type="button"><span>Up</span>
+                    <button class="button button--border-surfie-green js-scroll-up" type="button"><span>Up</span>
                       <div class="button__icon">
                         <svg class="svg-icon svg-icon--surfie-green" width="10" height="14">
                           <use href="images/svg/svg-sprite/symbol/sprite.svg#arrow-up" x="0" y="0"></use>
@@ -355,11 +355,11 @@
             </div>
             <div class="application-form__item">
               <div class="button-group">
-                <a class="button button--bg-white button-group__button" href="application-page-1.html">Back
+                <a class="button button--white button-group__button" href="application-page-1.html">Back
                 </a>
-                <a class="button button-group__button" href="application-page-3.html">Next
+                <a class="button button--surfie-green button-group__button" href="application-page-3.html">Next
                 </a>
-                <button class="button button--bg-transparent button-group__button">Discard
+                <button class="button button--transparent button-group__button">Discard
                 </button>
               </div>
             </div>
