--- a/app/static/settings-page.html
+++ b/app/static/settings-page.html
@@ -179,7 +179,7 @@
                               <figure style="background-image:url('images/user/avatar.jpg')"></figure>
                             </div>
                             <div class="edit-avatar__button">
-                              <button class="button button--round button--bg-alabaster button--size-50" type="button" data-modal-open="edit-avatar-modal">
+                              <button class="button button--round button--alabaster button--size-50" type="button" data-modal-open="edit-avatar-modal">
                                 <svg class="svg-icon svg-icon--surfie-green" width="18" height="16">
                                   <use href="images/svg/svg-sprite/symbol/sprite.svg#camera" x="0" y="0"></use>
                                 </svg>
@@ -581,7 +581,7 @@
                           <div class="row-group__item">
                             <div class="dropdown js-dropdown skills-dropdown" data-dropdown="skills">
                               <div class="dropdown__toggle skills-dropdown__toggle" data-dropdown-toggle="skills">
-                                <button class="button button--bordered button--size-20" type="button">
+                                <button class="button button--border-surfie-green button--size-20" type="button">
                                   <svg class="svg-icon svg-icon--surfie-green" width="10" height="10">
                                     <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
                                   </svg>
@@ -603,7 +603,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <button class="button button--shadowed button--bg-white" type="button">Confirm
+                                  <button class="button button--shadowed button--white" type="button">Confirm
                                   </button>
                                 </form>
                                 <div class="skills-dropdown__variants">
@@ -798,7 +798,7 @@
                           <div class="row-group__item">
                             <div class="dropdown js-dropdown skills-dropdown" data-dropdown="skills">
                               <div class="dropdown__toggle skills-dropdown__toggle" data-dropdown-toggle="skills">
-                                <button class="button button--bordered button--size-20" type="button">
+                                <button class="button button--border-surfie-green button--size-20" type="button">
                                   <svg class="svg-icon svg-icon--surfie-green" width="10" height="10">
                                     <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
                                   </svg>
@@ -820,7 +820,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <button class="button button--shadowed button--bg-white" type="button">Confirm
+                                  <button class="button button--shadowed button--white" type="button">Confirm
                                   </button>
                                 </form>
                                 <div class="skills-dropdown__variants">
@@ -1013,17 +1013,17 @@
                             <h6>Uploaded documents: <span class="p-sm font-semibold upload-documents__header-empty text-silver-chalice">No files yet</span></h6>
                           </div>
                           <div class="upload-documents__header-button">
-                            <button class="button button--disabled button--shadowed button--bg-white" type="button"><span>Download all</span><span class="button__icon">
-                                                                      <svg class="svg-icon" width="15" height="13">
-                                                                        <use href="images/svg/svg-sprite/symbol/sprite.svg#download" x="0" y="0"></use>
-                                                                      </svg></span>
+                            <button class="button button--disabled button--shadowed button--white" type="button"><span>Download all</span>
+                              <svg class="svg-icon button__icon" width="15" height="13">
+                                <use href="images/svg/svg-sprite/symbol/sprite.svg#download" x="0" y="0"></use>
+                              </svg>
                             </button>
                           </div>
                         </div>
                         <div class="upload-documents__content">
                           <div class="upload-documents-box js-upload-documents-box">
                             <div class="upload-documents-box__label dz-message"><span class="upload-documents-box__label-title">Drag and drop files</span>
-                              <button class="button button--bg-alabaster button--size-50 upload-documents-box__label-button" type="button">
+                              <button class="button button--alabaster button--size-50 upload-documents-box__label-button" type="button">
                                 <svg class="svg-icon svg-icon--surfie-green" width="14" height="14">
                                   <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
                                 </svg>
@@ -1108,7 +1108,7 @@
                                 <p class="text-silver-chalice">Urgent (<span class="text-surfie-green">+15%</span>)</p>
                               </div>
                               <div class="row-group__item">
-                                <button class="button button--shadowed button--bg-white button--size-20" type="button">
+                                <button class="button button--shadowed button--white button--size-20" type="button">
                                   <svg class="svg-icon svg-icon--surfie-green" width="15" height="9">
                                     <use href="images/svg/svg-sprite/symbol/sprite.svg#eye" x="0" y="0"></use>
                                   </svg>
@@ -1122,7 +1122,7 @@
                                 <p class="text-silver-chalice">Rep (<span class="text-brick-red">-30%</span>)</p>
                               </div>
                               <div class="row-group__item">
-                                <button class="button button--shadowed button--bg-white button--size-20" type="button">
+                                <button class="button button--shadowed button--white button--size-20" type="button">
                                   <svg class="svg-icon svg-icon--surfie-green" width="15" height="9">
                                     <use href="images/svg/svg-sprite/symbol/sprite.svg#eye" x="0" y="0"></use>
                                   </svg>
@@ -1365,9 +1365,9 @@
             <div class="form__line">
               <div class="password-change-modal__buttons">
                 <div class="button-group button-group--column">
-                  <button class="button button-group__button" type="button" data-modal-open="password-change-success-modal">Confirm new password
+                  <button class="button button--surfie-green button-group__button" type="button" data-modal-open="password-change-success-modal">Confirm new password
                   </button>
-                  <button class="button button--bg-transparent button-group__button" type="button" data-modal-close="password-change-modal">Cancel
+                  <button class="button button--transparent button-group__button" type="button" data-modal-close="password-change-modal">Cancel
                   </button>
                 </div>
               </div>
@@ -1398,7 +1398,7 @@
           </div>
         </div>
         <div class="password-change-success-modal__button">
-          <button class="button button--bordered" type="button" data-modal-close="password-change-success-modal">OK !
+          <button class="button button--border-surfie-green" type="button" data-modal-close="password-change-success-modal">OK !
           </button>
         </div>
       </div>
@@ -1445,16 +1445,16 @@
             </div>
           </div>
           <div class="edit-avatar-tool__buttons">
-            <button class="button button--bg-transparent edit-avatar-tool__delete" type="button">Delete current photo
+            <button class="button button--transparent edit-avatar-tool__delete" type="button">Delete current photo
             </button>
             <div class="button-group">
-              <label class="button button--bg-alabaster button-group__button edit-avatar-tool__upload">
-                <input class="input--hidden" type="file" accept="image/*"><span>Upload new</span><span class="button__icon">
-                                      <svg class="svg-icon svg-icon--surfie-green" width="10" height="10">
-                                        <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
-                                      </svg></span>
+              <label class="button button--alabaster button-group__button edit-avatar-tool__upload">
+                <input class="input--hidden" type="file" accept="image/*"><span>Upload new</span>
+                <svg class="svg-icon svg-icon--surfie-green button__icon" width="10" height="10">
+                  <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
+                </svg>
               </label>
-              <button class="button button-group__button" type="button" data-modal-close="edit-avatar-modal">Apply
+              <button class="button button--surfie-green button-group__button" type="button" data-modal-close="edit-avatar-modal">Apply
               </button>
             </div>
           </div>
