inputs were refactored

--- a/app/static/application-page-1.html
+++ b/app/static/application-page-1.html
@@ -139,7 +139,7 @@
                                     </button>
                                     <div class="select__dropdown js-select-dropdown">
                                       <div class="select__search">
-                                        <input class="input input--bordered input--sm js-select-search" type="text" placeholder="Type something">
+                                        <input class="input input--border-alto input--sm js-select-search" type="text" placeholder="Type something">
                                       </div>
                                       <div class="custom-scroll select__dropdown-scroll" data-select-simplebar>
                                         <div class="select__options js-select-options">
@@ -165,7 +165,7 @@
                                     </button>
                                     <div class="select__dropdown js-select-dropdown">
                                       <div class="select__search">
-                                        <input class="input input--bordered input--sm js-select-search" type="text" placeholder="Type something">
+                                        <input class="input input--border-alto input--sm js-select-search" type="text" placeholder="Type something">
                                       </div>
                                       <div class="custom-scroll select__dropdown-scroll" data-select-simplebar>
                                         <div class="select__options js-select-options">
@@ -190,7 +190,7 @@
                           </div>
                           <div class="input-group">
                             <div class="input-group__input">
-                              <input class="input" type="number" placeholder="0.00">
+                              <input class="input input--alabaster" type="number" placeholder="0.00">
                             </div>
                             <div class="input-group__append input-group__append--p-0">
                               <div class="select js-select select--transparent">
@@ -288,7 +288,7 @@
                                 </button>
                                 <div class="select__dropdown js-select-dropdown">
                                   <div class="select__search">
-                                    <input class="input input--bordered input--sm js-select-search" type="text" placeholder="Type something">
+                                    <input class="input input--border-alto input--sm js-select-search" type="text" placeholder="Type something">
                                   </div>
                                   <div class="custom-scroll select__dropdown-scroll" data-select-simplebar>
                                     <div class="select__options js-select-options">
@@ -307,7 +307,7 @@
                                   <p>Your prefered price per <span class="font-bold">1 word</span></p>
                                 </div>
                                 <div class="input-group__input">
-                                  <input class="input" type="number" placeholder="0.00">
+                                  <input class="input input--alabaster" type="number" placeholder="0.00">
                                 </div>
                                 <div class="input-group__append input-group__append--p-0">
                                   <div class="select js-select select--transparent">
@@ -337,7 +337,7 @@
                                 </button>
                                 <div class="select__dropdown js-select-dropdown">
                                   <div class="select__search">
-                                    <input class="input input--bordered input--sm js-select-search" type="text" placeholder="Type something">
+                                    <input class="input input--border-alto input--sm js-select-search" type="text" placeholder="Type something">
                                   </div>
                                   <div class="custom-scroll select__dropdown-scroll" data-select-simplebar>
                                     <div class="select__options js-select-options">
@@ -356,7 +356,7 @@
                                   <p>Your prefered price per <span class="font-bold">1 word</span></p>
                                 </div>
                                 <div class="input-group__input">
-                                  <input class="input" type="number" placeholder="0.00">
+                                  <input class="input input--alabaster" type="number" placeholder="0.00">
                                 </div>
                                 <div class="input-group__append input-group__append--p-0">
                                   <div class="select js-select select--transparent">
@@ -456,7 +456,7 @@
                                 </button>
                                 <div class="select__dropdown js-select-dropdown">
                                   <div class="select__search">
-                                    <input class="input input--bordered input--sm js-select-search" type="text" placeholder="Type something">
+                                    <input class="input input--border-alto input--sm js-select-search" type="text" placeholder="Type something">
                                   </div>
                                   <div class="custom-scroll select__dropdown-scroll" data-select-simplebar>
                                     <div class="select__options js-select-options">
@@ -481,7 +481,7 @@
                             <div class="col-12 col-lg-8">
                               <div class="input-group">
                                 <div class="input-group__input">
-                                  <input class="input" type="number" placeholder="0.00">
+                                  <input class="input input--alabaster" type="number" placeholder="0.00">
                                 </div>
                                 <div class="input-group__append input-group__append--p-0">
                                   <div class="select js-select select--transparent">
@@ -565,7 +565,7 @@
                                     </button>
                                     <div class="select__dropdown js-select-dropdown">
                                       <div class="select__search">
-                                        <input class="input input--bordered input--sm js-select-search" type="text" placeholder="Type something">
+                                        <input class="input input--border-alto input--sm js-select-search" type="text" placeholder="Type something">
                                       </div>
                                       <div class="custom-scroll select__dropdown-scroll" data-select-simplebar>
                                         <div class="select__options js-select-options">
@@ -591,7 +591,7 @@
                                     </button>
                                     <div class="select__dropdown js-select-dropdown">
                                       <div class="select__search">
-                                        <input class="input input--bordered input--sm js-select-search" type="text" placeholder="Type something">
+                                        <input class="input input--border-alto input--sm js-select-search" type="text" placeholder="Type something">
                                       </div>
                                       <div class="custom-scroll select__dropdown-scroll" data-select-simplebar>
                                         <div class="select__options js-select-options">
@@ -616,7 +616,7 @@
                           </div>
                           <div class="input-group">
                             <div class="input-group__input">
-                              <input class="input" type="number" placeholder="0.00">
+                              <input class="input input--alabaster" type="number" placeholder="0.00">
                             </div>
                             <div class="input-group__append input-group__append--p-0">
                               <div class="select js-select select--transparent">
@@ -669,7 +669,7 @@
                                     </button>
                                     <div class="select__dropdown js-select-dropdown">
                                       <div class="select__search">
-                                        <input class="input input--bordered input--sm js-select-search" type="text" placeholder="Type something">
+                                        <input class="input input--border-alto input--sm js-select-search" type="text" placeholder="Type something">
                                       </div>
                                       <div class="custom-scroll select__dropdown-scroll" data-select-simplebar>
                                         <div class="select__options js-select-options">
@@ -695,7 +695,7 @@
                                     </button>
                                     <div class="select__dropdown js-select-dropdown">
                                       <div class="select__search">
-                                        <input class="input input--bordered input--sm js-select-search" type="text" placeholder="Type something">
+                                        <input class="input input--border-alto input--sm js-select-search" type="text" placeholder="Type something">
                                       </div>
                                       <div class="custom-scroll select__dropdown-scroll" data-select-simplebar>
                                         <div class="select__options js-select-options">
@@ -720,7 +720,7 @@
                           </div>
                           <div class="input-group">
                             <div class="input-group__input">
-                              <input class="input" type="number" placeholder="0.00">
+                              <input class="input input--alabaster" type="number" placeholder="0.00">
                             </div>
                             <div class="input-group__append input-group__append--p-0">
                               <div class="select js-select select--transparent">
@@ -793,7 +793,7 @@
                                 </button>
                                 <div class="select__dropdown js-select-dropdown">
                                   <div class="select__search">
-                                    <input class="input input--bordered input--sm js-select-search" type="text" placeholder="Type something">
+                                    <input class="input input--border-alto input--sm js-select-search" type="text" placeholder="Type something">
                                   </div>
                                   <div class="custom-scroll select__dropdown-scroll" data-select-simplebar>
                                     <div class="select__options js-select-options">
@@ -818,7 +818,7 @@
                             <div class="col-12 col-lg-8">
                               <div class="input-group">
                                 <div class="input-group__input">
-                                  <input class="input" type="number" placeholder="0.00">
+                                  <input class="input input--alabaster" type="number" placeholder="0.00">
                                 </div>
                                 <div class="input-group__append input-group__append--p-0">
                                   <div class="select js-select select--transparent">
@@ -893,7 +893,7 @@
                                 </button>
                                 <div class="select__dropdown js-select-dropdown">
                                   <div class="select__search">
-                                    <input class="input input--bordered input--sm js-select-search" type="text" placeholder="Type something">
+                                    <input class="input input--border-alto input--sm js-select-search" type="text" placeholder="Type something">
                                   </div>
                                   <div class="custom-scroll select__dropdown-scroll" data-select-simplebar>
                                     <div class="select__options js-select-options">
@@ -918,7 +918,7 @@
                             <div class="col-12 col-lg-8">
                               <div class="input-group">
                                 <div class="input-group__input">
-                                  <input class="input" type="number" placeholder="0.00">
+                                  <input class="input input--alabaster" type="number" placeholder="0.00">
                                 </div>
                                 <div class="input-group__append input-group__append--p-0">
                                   <div class="select js-select select--transparent">
@@ -966,7 +966,7 @@
                               <p>Your price per <span class="font-bold">1 hr</span></p>
                             </div>
                             <div class="input-group__input">
-                              <input class="input" type="number" placeholder="0.00">
+                              <input class="input input--alabaster" type="number" placeholder="0.00">
                             </div>
                             <div class="input-group__append input-group__append--p-0">
                               <div class="select js-select select--transparent">
