--- a/app/static/application-page-3.html
+++ b/app/static/application-page-3.html
@@ -78,7 +78,7 @@
                         <div class="column-group__item">
                           <div class="input-animation js-input-animation input-animation--required">
                             <label class="input-animation__label" for="name">Name, surname</label>
-                            <input class="input input--bordered" type="text" id="name">
+                            <input class="input input--border-alto" type="text" id="name">
                           </div>
                         </div>
                         <div class="column-group__item">
@@ -86,13 +86,13 @@
                             <div class="row-group__item">
                               <div class="input-animation js-input-animation input-animation--required">
                                 <label class="input-animation__label" for="email">Email</label>
-                                <input class="input input--bordered" type="email" id="email">
+                                <input class="input input--border-alto" type="email" id="email">
                               </div>
                             </div>
                             <div class="row-group__item">
                               <div class="input-animation js-input-animation input-animation--required">
                                 <label class="input-animation__label" for="phone">Phone number</label>
-                                <input class="input input--bordered" type="email" id="phone">
+                                <input class="input input--border-alto" type="email" id="phone">
                               </div>
                             </div>
                           </div>
@@ -100,7 +100,7 @@
                         <div class="column-group__item">
                           <div class="input-animation js-input-animation input-animation--required">
                             <label class="input-animation__label" for="address">Address #1</label>
-                            <input class="input input--bordered" type="text" id="address">
+                            <input class="input input--border-alto" type="text" id="address">
                           </div>
                         </div>
                         <div class="column-group__item">
@@ -108,13 +108,13 @@
                             <div class="row-group__item">
                               <div class="input-animation js-input-animation input-animation--required">
                                 <label class="input-animation__label" for="zip">Zip code</label>
-                                <input class="input input--bordered" type="text" id="zip">
+                                <input class="input input--border-alto" type="text" id="zip">
                               </div>
                             </div>
                             <div class="row-group__item">
                               <div class="input-animation js-input-animation input-animation--required">
                                 <label class="input-animation__label" for="city">City</label>
-                                <input class="input input--bordered" type="text" id="city">
+                                <input class="input input--border-alto" type="text" id="city">
                               </div>
                             </div>
                           </div>
@@ -124,14 +124,14 @@
                             <div class="row-group__item">
                               <div class="input-animation js-input-animation input-animation--required">
                                 <label class="input-animation__label" for="language">Your native language</label>
-                                <input class="input input--bordered" type="text" id="language">
+                                <input class="input input--border-alto" type="text" id="language">
                               </div>
                             </div>
                             <div class="row-group__item">
                               <div class="datepicker">
                                 <div class="input-animation js-input-animation input-animation--required">
                                   <label class="input-animation__label" for="birthday">Birthday</label>
-                                  <input class="input input--bordered datepicker__input js-datepicker-input" type="text" id="birthday">
+                                  <input class="input input--border-alto datepicker__input js-datepicker-input" type="text" id="birthday">
                                 </div>
                               </div>
                             </div>
@@ -140,7 +140,7 @@
                         <div class="column-group__item">
                           <div class="input-animation js-input-animation">
                             <label class="input-animation__label" for="info">Additional info:</label>
-                            <input class="input input--bordered" type="text" id="info">
+                            <input class="input input--border-alto" type="text" id="info">
                           </div>
                         </div>
                       </div>
@@ -162,37 +162,37 @@
                           <div class="column-group__item">
                             <div class="input-animation js-input-animation input-animation--required">
                               <label class="input-animation__label" for="holder">Account holder</label>
-                              <input class="input input--bordered" type="text" id="holder">
+                              <input class="input input--border-alto" type="text" id="holder">
                             </div>
                           </div>
                           <div class="column-group__item">
                             <div class="input-animation js-input-animation input-animation--required">
                               <label class="input-animation__label" for="bankName">Bank name</label>
-                              <input class="input input--bordered" type="text" id="bankName">
+                              <input class="input input--border-alto" type="text" id="bankName">
                             </div>
                           </div>
                           <div class="column-group__item">
                             <div class="input-animation js-input-animation input-animation--required">
                               <label class="input-animation__label" for="bankAccount">Bank account no</label>
-                              <input class="input input--bordered" type="number" id="bankAccount">
+                              <input class="input input--border-alto" type="number" id="bankAccount">
                             </div>
                           </div>
                           <div class="column-group__item">
                             <div class="input-animation js-input-animation input-animation--required">
                               <label class="input-animation__label" for="swiftNumber">Swift Number</label>
-                              <input class="input input--bordered" type="number" id="swiftNumber">
+                              <input class="input input--border-alto" type="number" id="swiftNumber">
                             </div>
                           </div>
                           <div class="column-group__item">
                             <div class="input-animation js-input-animation input-animation--required">
                               <label class="input-animation__label" for="bankCode">Bank code</label>
-                              <input class="input input--bordered" type="number" id="bankCode">
+                              <input class="input input--border-alto" type="number" id="bankCode">
                             </div>
                           </div>
                           <div class="column-group__item">
                             <div class="input-animation js-input-animation">
                               <label class="input-animation__label" for="paypalEmail">Paypal email if avaliable:</label>
-                              <input class="input input--bordered" type="number" id="paypalEmail">
+                              <input class="input input--border-alto" type="number" id="paypalEmail">
                             </div>
                           </div>
                         </div>
