--- a/app/static/application-page-2.html
+++ b/app/static/application-page-2.html
@@ -107,12 +107,12 @@
                           </div>
                           <div class="row">
                             <div class="col-12 col-md-6 mb-15 mb-md-0">
-                              <input class="input input--bordered" type="text" placeholder="Diploma type (ex. bacaular)">
+                              <input class="input input--border-alto" type="text" placeholder="Diploma type (ex. bacaular)">
                             </div>
                             <div class="col-12 col-md-6">
                               <div class="input-animation js-input-animation">
                                 <label class="input-animation__label" for="category">Category:</label>
-                                <input class="input input--bordered" type="text" value="Translator" id="category">
+                                <input class="input input--border-alto" type="text" value="Translator" id="category">
                               </div>
                             </div>
                           </div>
@@ -317,7 +317,7 @@
                           <div class="col-12 col-md-6">
                             <div class="input-animation js-input-animation">
                               <label class="input-animation__label" for="custom">Custom:</label>
-                              <input class="input input--bordered" type="text" id="custom">
+                              <input class="input input--border-alto" type="text" id="custom">
                             </div>
                           </div>
                         </div>
