--- a/app/static/settings-page.html
+++ b/app/static/settings-page.html
@@ -215,7 +215,7 @@
                           </div>
                           <div class="info-list__right">
                             <div class="editable-text js-editable-text">
-                              <input class="input input--hidden editable-text__input" value="Vaidotas Rimeikis">
+                              <input class="input input--alabaster input--hidden editable-text__input" value="Vaidotas Rimeikis">
                               <div class="editable-text__title" contenteditable="true">Vaidotas Rimeikis</div>
                               <div class="editable-text__append">
                                 <div class="editable-text__append-icon">
@@ -237,7 +237,7 @@
                           </div>
                           <div class="info-list__right">
                             <div class="editable-text js-editable-text">
-                              <input class="input input--hidden editable-text__input" value="lj.baranauskas@gmail.com">
+                              <input class="input input--alabaster input--hidden editable-text__input" value="lj.baranauskas@gmail.com">
                               <div class="editable-text__title" contenteditable="true">lj.baranauskas@gmail.com</div>
                               <div class="editable-text__append">
                                 <div class="editable-text__append-icon">
@@ -259,7 +259,7 @@
                           </div>
                           <div class="info-list__right">
                             <div class="editable-text js-editable-text">
-                              <input class="input input--hidden editable-text__input" value="+3706891864">
+                              <input class="input input--alabaster input--hidden editable-text__input" value="+3706891864">
                               <div class="editable-text__title" contenteditable="true">+3706891864</div>
                               <div class="editable-text__append">
                                 <div class="editable-text__append-icon">
@@ -281,7 +281,7 @@
                           </div>
                           <div class="info-list__right">
                             <div class="editable-text js-editable-text">
-                              <input class="input input--hidden editable-text__input" value="Lithuanian">
+                              <input class="input input--alabaster input--hidden editable-text__input" value="Lithuanian">
                               <div class="editable-text__title" contenteditable="true">Lithuanian</div>
                               <div class="editable-text__append">
                                 <div class="editable-text__append-icon">
@@ -303,7 +303,7 @@
                           </div>
                           <div class="info-list__right">
                             <div class="editable-text js-editable-text">
-                              <input class="input input--hidden editable-text__input" value="Adres 5g.">
+                              <input class="input input--alabaster input--hidden editable-text__input" value="Adres 5g.">
                               <div class="editable-text__title" contenteditable="true">Adres 5g.</div>
                               <div class="editable-text__append">
                                 <div class="editable-text__append-icon">
@@ -325,7 +325,7 @@
                           </div>
                           <div class="info-list__right">
                             <div class="editable-text js-editable-text">
-                              <input class="input input--hidden editable-text__input" value="LT-4421">
+                              <input class="input input--alabaster input--hidden editable-text__input" value="LT-4421">
                               <div class="editable-text__title" contenteditable="true">LT-4421</div>
                               <div class="editable-text__append">
                                 <div class="editable-text__append-icon">
@@ -347,7 +347,7 @@
                           </div>
                           <div class="info-list__right">
                             <div class="editable-text js-editable-text">
-                              <input class="input input--hidden editable-text__input" value="Vilnius">
+                              <input class="input input--alabaster input--hidden editable-text__input" value="Vilnius">
                               <div class="editable-text__title" contenteditable="true">Vilnius</div>
                               <div class="editable-text__append">
                                 <div class="editable-text__append-icon">
@@ -369,7 +369,7 @@
                           </div>
                           <div class="info-list__right">
                             <div class="editable-text js-editable-text">
-                              <input class="input input--hidden editable-text__input" value="Lithuania">
+                              <input class="input input--alabaster input--hidden editable-text__input" value="Lithuania">
                               <div class="editable-text__title" contenteditable="true">Lithuania</div>
                               <div class="editable-text__append">
                                 <div class="editable-text__append-icon">
@@ -399,7 +399,7 @@
                           </div>
                           <div class="info-list__right">
                             <div class="editable-text js-editable-text">
-                              <input class="input input--hidden editable-text__input" value="Sample sample sample sample sample sample">
+                              <input class="input input--alabaster input--hidden editable-text__input" value="Sample sample sample sample sample sample">
                               <div class="editable-text__title" contenteditable="true">Sample sample sample sample sample sample</div>
                               <div class="editable-text__append">
                                 <div class="editable-text__append-icon">
@@ -468,7 +468,7 @@
                           </div>
                           <div class="info-list__right">
                             <div class="editable-text js-editable-text">
-                              <input class="input input--hidden editable-text__input" value="info@irina.com">
+                              <input class="input input--alabaster input--hidden editable-text__input" value="info@irina.com">
                               <div class="editable-text__title" contenteditable="true">info@irina.com</div>
                               <div class="editable-text__append">
                                 <div class="editable-text__append-icon">
@@ -595,7 +595,7 @@
                                 <form class="form skills-dropdown__search">
                                   <div class="skills-dropdown__search-input">
                                     <div class="input-group input-group--absolute">
-                                      <input class="input input--bordered input-group__input" type="text">
+                                      <input class="input input--border-alto input-group__input" type="text">
                                       <div class="input-group__append-absolute">
                                         <svg class="svg-icon svg-icon--silver-chalice" width="12" height="12">
                                           <use href="images/svg/svg-sprite/symbol/sprite.svg#search" x="0" y="0"></use>
@@ -812,7 +812,7 @@
                                 <form class="form skills-dropdown__search">
                                   <div class="skills-dropdown__search-input">
                                     <div class="input-group input-group--absolute">
-                                      <input class="input input--bordered input-group__input" type="text">
+                                      <input class="input input--border-alto input-group__input" type="text">
                                       <div class="input-group__append-absolute">
                                         <svg class="svg-icon svg-icon--silver-chalice" width="12" height="12">
                                           <use href="images/svg/svg-sprite/symbol/sprite.svg#search" x="0" y="0"></use>
@@ -1349,13 +1349,13 @@
             <div class="form__line">
               <div class="input-animation js-input-animation input-animation--required">
                 <label class="input-animation__label" for="oldPassword">Old password </label>
-                <input class="input input--bordered" type="password" id="oldPassword">
+                <input class="input input--border-alto" type="password" id="oldPassword">
               </div>
             </div>
             <div class="form__line">
               <div class="input-animation js-input-animation input-animation--required">
                 <label class="input-animation__label" for="newPassword">Email</label>
-                <input class="input input--bordered" type="password" id="newPassword">
+                <input class="input input--border-alto" type="password" id="newPassword">
               </div>
             </div>
             <div class="form__line">
@@ -1418,7 +1418,7 @@
           </div>
           <label class="edit-avatar-tool__placeholder">
             <div class="edit-avatar-tool__placeholder-wrap">
-              <input class="input--hidden" type="file" accept="image/*">
+              <input class="input--alabaster input--hidden" type="file" accept="image/*">
               <h4 class="font-semibold text-alto">Upload a new image</h4>
             </div>
           </label>
@@ -1434,7 +1434,7 @@
                 </svg>
               </div>
               <div class="input-range__wrap">
-                <input class="input input-range__input edit-avatar-tool__range-input" type="range" value="0">
+                <input class="input input--alabaster input-range__input edit-avatar-tool__range-input" type="range" value="0">
                 <div class="input-range__line"></div>
               </div>
               <div class="input-range__plus">
@@ -1449,7 +1449,7 @@
             </button>
             <div class="button-group">
               <label class="button button--alabaster button-group__button edit-avatar-tool__upload">
-                <input class="input--hidden" type="file" accept="image/*"><span>Upload new</span>
+                <input class="input--alabaster input--hidden" type="file" accept="image/*"><span>Upload new</span>
                 <svg class="svg-icon svg-icon--surfie-green button__icon" width="10" height="10">
                   <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
                 </svg>
