catalog-navigation was refactored

--- a/app/static/employers-page.html
+++ b/app/static/employers-page.html
@@ -666,14 +666,14 @@
                   <div class="catalog-navigation__count-total">/145</div>
                 </div>
                 <div class="catalog-navigation__button">
-                  <button class="button button--white button--size-50 button--radius-secondary" type="button">
+                  <button class="button button--shadowed button--white button--size-50 button--radius-secondary" type="button">
                     <svg class="svg-icon svg-icon--surfie-green catalog-navigation__button-icon" width="12" height="12">
                       <use href="images/svg/svg-sprite/symbol/sprite.svg#chevron-left" x="0" y="0"></use>
                     </svg>
                   </button>
                 </div>
                 <div class="catalog-navigation__button">
-                  <button class="button button--white button--size-50 button--radius-secondary" type="button">
+                  <button class="button button--shadowed button--white button--size-50 button--radius-secondary" type="button">
                     <svg class="svg-icon svg-icon--surfie-green catalog-navigation__button-icon" width="12" height="12">
                       <use href="images/svg/svg-sprite/symbol/sprite.svg#chevron-right" x="0" y="0"></use>
                     </svg>
