table component was fixed

--- a/app/static/settings-page.html
+++ b/app/static/settings-page.html
@@ -1234,7 +1234,7 @@
                   </div>
                   <div class="catalog__content-wrap">
                     <div class="row">
-                      <div class="col-12 offset-0 offset-xxl-1">
+                      <div class="col-12 col-xxl-11 offset-0 offset-xxl-1">
                         <p class="font-semibold">Have you learn to do new services?<br/> <a href="#" class="text-boston-blue">Contact<a /> the project manager to update your pricing & services list.</p>
                       </div>
                     </div>
